Opened 11 years ago

Closed 11 years ago

#10131 closed bug (fixed)

Package with more than one global-writable-files fails to commit transaction

Reported by: mt Owned by: bonefish
Priority: normal Milestone: R1
Component: Servers/package_daemon Version: R1/Development
Keywords: Package management Cc:
Blocked By: Blocking:
Platform: All

Description

When I put packages with more than one global-writable-files into home/config/packages, then it fails to copy second writable file.

Tested with cdrtools-3.01~a07-3-x86.hpkg

Attachments (1)

screenshot.png (92.3 KB ) - added by mt 11 years ago.

Download all attachments as: .zip

Change History (8)

by mt, 11 years ago

Attachment: screenshot.png added

comment:1 by anevilyak, 11 years ago

Component: - GeneralServers/package_daemon
Owner: changed from nobody to bonefish

comment:2 by bonefish, 11 years ago

Status: newin-progress

comment:3 by bonefish, 11 years ago

Fixed in hrev46284.

If you retest with the same installation you may need to remove the "administrative/writable-files/cdrtools-3.01~a07-3" directory first.

comment:4 by mt, 11 years ago

hrev46284 works fine, thanks!

It seems global-writable-files position is different, is it OK?

  • When put package into system/packages, writable files appears in /system/settings/.
  • When put package into home/packages, writable files appears in home/settings/global/.

comment:5 by bonefish, 11 years ago

Yes, that's intentional. Since "~/config/settings" is the directory for per-user settings, we can't use that directly or per-user and global settings files for a package could clash.

comment:6 by mt, 11 years ago

Thanks. I think this ticket can be closed.

comment:7 by bonefish, 11 years ago

Resolution: fixed
Status: in-progressclosed
Note: See TracTickets for help on using tickets.